[package]
name = "dify-client"
version = "0.1.0"
edition = "2021"
description = "A client for the Dify API"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.12.3", features = ["json", "multipart", "stream"] }
eventsource-stream = "0.2.3"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_with = "3.7.0"
bytes = "1.6.0"
infer = "0.15.0"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.33.0", features = ["macros"] }
